Actions
Bug #13747
closedudfs: variable may be used uninitialized
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with shadow gcc 7:
fsdb.c: In function 'get_blkno': fsdb.c:852:9: error: 'lad' may be used uninitialized in this function [-Werror=maybe-uninitialized] 852 | len = SWAP_32(lad->lad_ext_len); fsdb.c:847:9: error: 'sad' may be used uninitialized in this function [-Werror=maybe-uninitialized] 847 | len = SWAP_32(sad->sad_ext_len); cc1: all warnings being treated as errors fsdb.c:852:16: error: 'len' may be used uninitialized in this function [-Werror=maybe-uninitialized] flags = len >> 30; ~~~~^~~~~ fsdb.c:859:17: error: 'bno' may be used uninitialized in this function [-Werror=maybe-uninitialized] de[d].blkno = bno; ~~~~~~~~~~~~^~~~~ fsdb.c:857:15: error: 'prn' may be used uninitialized in this function [-Werror=maybe-uninitialized] de[d].prn = prn; ~~~~~~~~~~^~~~~ cc1: all warnings being treated as errors *** Error code 1 dmake: Fatal error: Command failed for target `fsdb.o' Current working directory /code/illumos-gate/usr/src/cmd/fs.d/udfs/fsdb
Cleaned up all uninitialized warnings in udfs tree.
Testing done: build/install/boot
Updated by Toomas Soome about 1 year ago
- Subject changed from udfs/fsdb: variable may be used uninitialized to udfs: variable may be used uninitialized
- Description updated (diff)
Updated by Electric Monk about 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit eee96f107560ac00d5cc32e4aa8a02376aaf19d4
commit eee96f107560ac00d5cc32e4aa8a02376aaf19d4 Author: Toomas Soome <tsoome@me.com> Date: 2021-05-10T17:50:24.000Z 13747 udfs: variable may be used uninitialized Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions