usr/src/cmd/fs.d/udfs/common/ud_lib.h
@@ -26,8 +26,6 @@
 #ifndef	_UD_LIB_H
 #define	_UD_LIB_H
 
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-
 #ifdef	__cplusplus
 extern "C" {
 #endif
